# sys-mgr

./: CMakeLists.txt  README.md
conf/: com.SystemManager.Service.conf  com.go001.SystemManager.conf  com.go001.TerminalUI.conf  org.example.Receiver.conf
include/: audio.h  comm.h  dbus_comm.h  log.h  sys-mgr.h  sys_comm.h  sys_mgr.h  task.h  workqueue.h
include/audio/: audio.h  sound.h
include/comm/: cmd_payload.h  dbus_comm.h  f_comm.h  sys_comm.h
include/comm/net/: network.h
include/devices/: imu.h
include/hw/: common.h  imu.h
include/sched/: workqueue.h
include/sys_comm/: network.h
src/: main.c  sys-mgr.c  sys_mgr.c  task_handler.c  workqueue.c
src/audio/: audio_effect.c  audio_mgr.c
src/audio/sounds/: system_sounds.c
src/comm/: cmd_payload.c  dbus-comm.c  dbus_comm.c  events.c  fs_comm.c  internal_comm.c
src/comm/net/: network.c  wifi.c
src/comm/sys_comm/: network.c  wifi.c
src/comm/sys_comm/net/: network.c  wifi.c
src/core/: mgr_task_executor.c  task_exec.c
src/core/task/: task_executor.c  task_scheduler.c  workqueue.c
src/hardware/: backlight.c  vibrator.c
src/hardware/imu/: imu.c  kalman.c
src/helper/: events.c  workqueue.c
src/hw/: als.c  backlight.c  common.c  vibrator.c
src/hw/imu/: imu.c  kalman.c
src/task/: task_exec.c
utils/: sys-utils.c  sys_utils.c
